--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "node --max-old-space-size=8192 ./node_modules/.bin/expo start",
-    "android": "node --max-old-space-size=8192 ./node_modules/.bin/expo start --android",
-    "ios": "node --max-old-space-size=8192 ./node_modules/.bin/expo start --ios",
-    "web": "node --max-old-space-size=8192 ./node_modules/.bin/expo start --web",
-    "start-reset": "node --max-old-space-size=8192 ./node_modules/.bin/expo start --clear"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "start-reset": "expo start --clear"
   },
   "dependencies": {
+    "@expo/cli": "^54.0.21",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
